# pybg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bg.py  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  pytest.yml
pybg/: __init__.py
tests/: test_pybg.py
