[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pybg"
description = "Local job management tool"
readme = "README.md"
authors = [
    { name = "Naoyuki Kamo", email = "naoyuki.kamo829@gmail.com" }
]
license = { text = "MIT" }
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pybg.__version__"}


[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "pytest-cov",
    "mypy",
    "flake8",
    "Flake8-pyproject",
]

[tool.setuptools.package-dir]
pybg = "pybg"

[project.scripts]
pybg = "pybg:main"

[tool.ruff]
target-version = "py37"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.7"

[tool.pytest.ini_options]
addopts = "--cov=pybg --cov-branch --cov-report=xml"
testpaths = ["tests"]


[tool.black]
target-version = ['py37']
line-length = 120


[tool.flake8]
max-line-length = 120
extend-ignore = ['E203','E501','E701']
